# local-agent-toolkit

./: .env.example  .gitignore  README.md  __init__.py  agent.py  app.py  mcp_config.json  publish.sh  pyproject.toml  requirements.txt  setup.py  test.py  tool_call.py  tools.py  tools_definition.py
.github/workflows/: publish.yml
__test__/: __init__.py  ollama_agent_test.py  openai_agent_test.py  sqlite_test.py  test_mcp_integration.py  test_serialization.py
agents/: OllamaAgent.py  OpenAIAgent.py  OpenAIAgentWithMCP.py
docs/: ENV_MANAGEMENT.md  IMPLEMENTATION_SUMMARY.md  MCP_INTEGRATION.md  PUBLISHING_GUIDE.md
examples/: demo_playwright_mcp.py  playwright_mcp_example.py
helper/: __init__.py  agent.py  setup.py  tool_call.py  tools.py  tools_definition.py
mcp_server/: config_loader.py  mcp_client.py
